# tft-rolldown

./: README.md  champion.py  pyproject.toml  roll.py  rollorlvl.py  run_rolldown.py  stats.py  test.py  utils.py
.github/workflows/: actions.yaml
examples/: lvl4_1cost.yaml  lvl4_1costs.json  lvl7_heartsteel.json  lvl7_heartsteel_copiestaken.json  lvl8_executioner.json  lvl8_heartsteel.json  sentinel_ahri.json
roll_sim/code/: champion.py  roll.py  roll_champions.py  roll_headliners.py  utils.py
roll_sim/data/: champion_data.py  champion_pool_sizes.yml  champions.json  champions.yml  champions_full.json  levels.yml  odds.json  tft-champion.json  traits.json
roll_sim/experiments/: xd.ipynb
roll_sim/scripts/: headliner_rolldown.py  rolldown.py  rollorlvl.py  run_rolldown.py
roll_sim/tests/: fixtures.py  test_dummy.py  test_headliners.py  test_rolldown.py
